feat(core): 更新阿里云签名工具类注释并优化代码结构
- 将腾讯云签名工具类注释更正为阿里云签名工具类
- 移除TxCloudUtil中不必要的URLEncoder导入
- 优化dnsSend方法参数列表格式以提高可读性
- 移除了TxCloudUtil中的main测试方法
- 在oauth服务中增加了Redis配置项
- 添加了短信服务商相关配置属性
- 引入了新的SMS mapper模块依赖
- 升级了OAuth服务器starter项目版本至1.1.1-SNAPSHOT
- 移除了前端遗留的JavaScript文件(app.js和area.js)